Fixing spacing on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -86,7 +86,7 @@ html {
   }
   .left {
     position: relative;
-    right: -1.5rem;
+    right: -1.8rem;
   }
 }
 
